# web3-phishing-detection

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yaml
app/: Dockerfile  app.py  docker-compose.yaml  requirements.txt  utils.py
app/templates/: error.html  index.html  show.html
ml-dev/: config.yaml  generate_model_metrics.py  test_predictions.py  train_and_save_model.py  utilities.py
ml_dev/: config.yaml  generate_model_metrics.py  train_and_save_model.py  utilities.py
ml_dev/notebooks/: exploration.ipynb
tests/ml_dev/: test_generate_model_metrics.py
