[tool.poetry]
name = "web3-phishing-detection"
version = "0.1.0"
description = ""
authors = ["Vince Lam <57117625+vince-lam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.3"
torch = "^2.1.1"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
transformers = "^4.35.2"
flask = "^3.0.0"
jupyter = "^1.0.0"
notebook = "^7.0.6"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ipywidgets = "^8.1.1"
python-dotenv = "^1.0.0"
evaluate = "^0.4.1"
datasets = "^2.15.0"
tqdm = "^4.66.1"
accelerate = "^0.25.0"
onnx = "^1.15.0"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
